<resources>
    <string name="app_name">LoginExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login_text">登录</string>
    <string name="edit_login_account_hint_text">邮箱/手机号</string>
    <string name="edit_login_password_hint_text">请输入密码</string>
    <string name="register_text">注册</string>
    <string name="forgot_psw_text">忘记密码</string>
    <string name="title_activity_simple_adapter">SimpleAdapterActivity</string>
</resources>
